# sr-movie

./: .gitignore  .gitmodules  README.md  README.rst  config.json  main.py  pyproject.toml
sr_movie/: main.py
sr_movie/conf/: config.py
tests/: test_sr_movie.py
