[tool.poetry]
name = "sr_movie"
version = "0.1.0"
description = ""
authors = ["CentralEden <central.eden@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
basicsr = "1.4.2"
facexlib = "0.2.5"
gfpgan = "1.3.5"
numpy = "^1.26.4"
opencv-python = "^4.10.0"
pillow = "^10.3.0"
tqdm = "^4.66.4"
torch = "1.13.1+cu117"
torchvision = "0.14.1+cu117"
torchaudio = "0.13.1"
urllib3 = "^1.26.13"
idna = "^3.4"
certifi = "^2022.12.7"
scipy = "^1.13.1"
ffmpeg-python = "^0.2.0"
pydantic = "^2.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[[tool.poetry.source]]
name = "torch_cu117"
url = "https://download.pytorch.org/whl/cu117/"
priority = 'supplemental'


[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
mypy = "^1.10.1"
typed-ast = "^1.5.5"
pysen = "^0.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
check = "python sr_movie/main.py check"
create_ds = "python sr_movie/main.py create_ds"
gen_low_scale = "python sr_movie/main.py gen_low_scale"
upscale = "python sr_movie/main.py upscale"


[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 120
py_version = "py39"
[[tool.pysen.lint.mypy_targets]]
  paths = ["./sr_movie"]